    copy-on-write). (Nikita)
  . Fixed bug #51800 (proc_open on Windows hangs forever). (Anatol)
  . Fixed bug #68118 ($a->foo .= 'test'; can leave $a->foo undefined). (Nikita)
  . Fixed bug #68129 (parse_url() - incomplete support for empty usernames 
    and passwords) (Tjerk)
  . Fixed bug #67949 (DOMNodeList elements should be accessible through
    array notation) (Florian)

- FPM:
  . Fixed bug #65641 (PHP-FPM incorrectly defines the SCRIPT_NAME variable
    when using Apache, mod_proxy-fcgi and ProxyPass). (Remi)
  . Implemented FR #55508 (listen and listen.allowed_clients should take IPv6
    addresses). (Robin Gloster)

- Reflection:
  . Fixed bug #68103 (Duplicate entry in Reflection for class alias). (Remi)

- OpenSSL:
  . Fixed bug #68074 (Allow to use system cipher list instead of hardcoded
    value). (Remi)

- Mysqli:
  . Fixed bug #68114 (linker error on some OS X machines with fixed width
    decimal support) (Keyur Govande)

- ODBC:
  . Fixed bug #68087 (ODBC not correctly reading DATE column when preceded by
    a VARCHAR column) (Keyur Govande)

02 Oct 2014, PHP 5.6.1

- Core:
  . Implemented FR #38409 (parse_ini_file() looses the type of booleans). (Tjerk)
  . Fixed bug #65463 (SIGSEGV during zend_shutdown()). (Keyur Govande)
  . Fixed bug #66036 (Crash on SIGTERM in apache process). (Keyur Govande)
  . Fixed bug #67878 (program_prefix not honoured in man pages). (Remi)
  . Fixed bug #67938 (Segfault when extending interface method with variadic).
    (Nikita)
  . Fixed bug #67985 (Incorrect last used array index copied to new array after
    unset). (Tjerk)
  . Fixed bug #68088 (New Posthandler Potential Illegal efree() vulnerability).
    (Mike) (CVE-2014-3622)

- DOM:
  . Made DOMNode::textContent writeable. (Tjerk)

- Fileinfo:
  . Fixed bug #67731 (finfo::file() returns invalid mime type
    for binary files). (Anatol)

- GD:
  . Made fontFetch's path parser thread-safe. (Sara)

- GMP: