@@ -13,6 +13,7 @@ PHP                                                                        NEWS
     and passwords) (Tjerk)
   . Fixed bug #67949 (DOMNodeList elements should be accessible through
     array notation) (Florian)
+  . Implemented 64-bit format codes for pack() and unpack(). (Leigh)
 
 - FPM:
   . Fixed bug #65641 (PHP-FPM incorrectly defines the SCRIPT_NAME variable
